Add iterators for fielded and unfielded regex expansion. These iterators provide field, date and datatype filtering in a single layer of the iterator stack.
Discovered issue where the UnfieldedRegexExpansionVisitor would delegate
lookups to the RegexIndexExpansionVisitor, thus setting field and value
thresholds. If either threshold is exceeded during an unfielded lookup
there is the potential for missed results.

Updated the index expansion visitors to avoid this error condition and
corrected test assertions throughout.

It should be more clear precisely what kind of lookup is created.